# haetae-provider

./: CMakeLists.txt  README.md
haetae_ref/include/: config.h  haetae_context.h  params.h  sign.h
haetae_ref/src/: haetae_keymgmt.c  haetae_provider.c  haetae_signature.c  sign.c
